# triton-rust

./: .gitignore  AGENTS.md  Cargo.toml
crates/triton-cnapi/: Cargo.toml  README.md
crates/triton-cnapi/src/: client.rs  lib.rs  models.rs
crates/triton-cnapi/tests/: cnapi_data_parsing.rs
crates/triton-cnapi/tests/fixtures/: server_detail.json  server_list.json
crates/triton-core/: Cargo.toml  README.md
crates/triton-core/src/: client.rs  config.rs  error.rs  lib.rs  query.rs  services.rs  types.rs  uuid.rs
crates/triton-fwapi/: Cargo.toml  README.md
crates/triton-fwapi/src/: client.rs  lib.rs  models.rs
crates/triton-imgapi/: Cargo.toml  README.md
crates/triton-imgapi/src/: client.rs  lib.rs  models.rs
crates/triton-napi/: Cargo.toml  README.md
crates/triton-napi/src/: client.rs  lib.rs  models.rs
crates/triton-papi/: Cargo.toml  README.md
crates/triton-papi/src/: client.rs  lib.rs  models.rs
crates/triton-sapi/: Cargo.toml  README.md
crates/triton-sapi/src/: client.rs  lib.rs  models.rs
crates/triton-ufds/: Cargo.toml  README.md
crates/triton-ufds/src/: client.rs  config.rs  dn.rs  group.rs  lib.rs  user.rs
crates/triton-vmapi/: Cargo.toml  README.md
crates/triton-vmapi/src/: client.rs  lib.rs  models.rs
crates/triton-vmapi/tests/: vmapi_data_parsing.rs
crates/triton-vmapi/tests/fixtures/: production_vm_list.json
docs/: triton-rust-integration.md
