[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Triton Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "gzip"] }
url = "2.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Logging
tracing = "0.1"

# Testing
mockall = "0.13"
wiremock = "0.6"
