[package]
name = "triton-ufds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true }
ldap3 = { version = "0.11", features = ["tls"] }
native-tls = "0.2"
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
triton-core = { path = "../triton-core" }
url.workspace = true
validator.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true
